webroot/common/ui/css/contrail.controller.css
/* ... */
div.vis-refresh:before{
    content: "\f01e";
}

div.vis-network div.vis-navigation div.vis-button:hover{
    box-shadow:none;}

div.vis-network div.vis-navigation div.vis-button.vis-zoomIn{
    top:10px;
    right:10px;
    background-image:none;
}

div.vis-network div.vis-navigation div.vis-button.vis-zoomIn:before{
    content: "\f00e";
}

div.vis-network div.vis-navigation div.vis-button.vis-zoomOut{
    top:50px;
    right:10px;
    background-image:none;
}

div.vis-network div.vis-navigation div.vis-button.vis-zoomOut:before{
    content: "\f010";
}

div.vis-network div.vis-navigation div.vis-button.vis-zoomExtends{
    top:90px;
    right:10px;
    background-image:none;
}

div.vis-network div.vis-navigation div.vis-button.vis-zoomExtends:before{
    content: "\f05c";
}

div.vis-network div.vis-navigation div.vis-button.vis-up, div.vis-network div.vis-navigation div.vis-button.vis-down,
div.vis-network div.vis-navigation div.vis-button.vis-right, div.vis-network div.vis-navigation div.vis-button.vis-left{
    display:none;
}

div.vis-network canvas{
    cursor:move;
}

#bgp-grid .value tr:last-child td{
    border-bottom:none;}
.sec_label{
    font-weight:500;
    color:#000;}
.familyAttr_val{padding-right:10px;}

#termCollection tbody tr:nth-child(4n+3) td,
#termCollection tbody tr:nth-child(4n+4) td{
    background: #fdfdfd;
}


#peer_selection>table{
    width:100%;}
.select2-container .select2-choice .select2-arrow b:before {
    padding:0px 8px 0px 0px;
    float:right;}
#address_family{
    padding-right:0px;
    width:220px;}
#configure-bgp_router #loop_count{width:204px;}
#bgp-grid ul.item-list .key{
    width:23.08% !important;
}
#bgp-grid ul.item-list .value{
    width:57.26%; !important;
}


#dashboard-alerts-modal ul.grid-action-menu{

    top:110px!important;}

#peer_selection>table table{width:100%; padding:0px 10px;}
#peer_selection>table table th, #peer_selection>table table td{padding-left:10px;}
#peer_selection>table th, #peer_selection>table td{padding-left:10px;}
#family_attrs{padding:0px 87px 0px 15px}
#family_attrs div a.editable-grid-add-link{
    float:left;
    font-size:12px;}
#family_attrs th:first-child, #family_attrs td:first-child, #static_routes_collection th:first-child, #family_attrs td:first-child{
    padding-left:50px;}
#peer_selection>table>thead>tr>th{
    line-height:1.4;
}
#peer_selection .contrail-editable-grid-table tr:nth-child(4n+3) td, #peer_selection .contrail-editable-grid-table tr:nth-child(4n+4) td{
    background:none;
}
#peer_selection>table.contrail-editable-grid-table tr th{
    padding-right:5px;}
#peer_selection>table.contrail-editable-grid-table table.contrail-editable-grid-table tr:nth-child(1) td {
    padding-top:6px;}
#peer_selection>table.contrail-editable-grid-table table.contrail-editable-grid-table tr:nth-child(3n+1) td, #peer_selection>table.contrail-editable-grid-table tr:nth-child(1) td {

    border-top:none;}
#peer_selection .item-list table tr:first-child td{
    background-color:gray;}
#bgp-grid .value th, #config-vn-list .value th, #service-instances-grid .value th, #global-bgp-options-grid th, #port-grid-id th{
    font-weight:600;
    border-bottom:#777 solid 1px;
    padding-bottom:2px;}
#global-bgp-options-grid th, #global-bgp-options-grid td{
    color:#777;
    font-size:12px;
}

#bgp-grid .value tr td{
    border-bottom:#f5f5f5 solid 1px;
    vertical-align:top;}
#config-vn-list .value td, #service-instances-grid .value td{
    vertical-align:top;}
#service-instances-grid .value td a{
    color:#3182bd;
    text-decoration:underline;}
#bgp-grid .value .addressFamily {
    padding: 5px 20px 20px 20px;
}

#bgp-grid .value .addressFamily tr td{border:none;}
#bgp-grid .addressFamily tr th{font-weight:normal; border:none; background:#cccccc; color:white;}
#bgp-grid .addressFamily tr td, #bgp-grid .addressFamily tr th{
    padding:0px 5px;}
#bgp-grid .addressFamily table{border:#CCC solid 1px; height:20px;overflow:scroll;}
#peer_selection>table{
    width:100%;}
.select2-container .select2-choice .select2-arrow b:before {
    padding:0px 8px 0px 0px;
    float:right;}
#address_family{
    padding-right:0px;
    width:250px;
    padding-top:0px;}
#prefix_limit{width:213px}
#bgp-grid ul.item-list .key, #config-vn-list ul.item-list .key, #service-instances-grid ul.item-list .key{
    width:23.08% !important;
}
#bgp-grid ul.item-list .value, #service-instances-grid ul.item-list .value{
    width:57.26% !important;
    vertical-align:top;
}
#config-vn-list ul.item-list .value{
    width:76.26%!important;
    vertical-align:top;}
div#peer_selection_section {
    padding-left: 10px;
}
tr.collapsibleChildContainer> td{
    padding-left:30px!important;
    padding-bottom:10px;
}
#peer_selection>table tr.data-row  td{
    padding-top:5px;}
#peer_selection th.action-cell, #peer_selection td.action-cell{
    text-align:left;
    padding-right:12px;}
#peer_selection>table table, #peer_selection>table table input{
    font-size:12px;}

tr.collapsibleChildContainer{
    border-bottom:#d7d7d7 solid 1px;}
.bgp-peer-text-center{text-align:center!important;}
/*#peer_selection .contrail-editable-grid-table thead,#peer_selection  .collection-table thead{
    line-height:1;}*/

#peer_selection>table tr.data-row>td{
    padding-top:10px!important;}
#interfaces-collection #interfaceType,#static-routes-collection #prefix, #static-routes-collection #next_hop{
    padding-right: 17px;
}
.no-margin{
    margin:0px!important;}
#PolicyRules .contrail-editable-grid-table th, #PolicyRules .contrail-editable-grid-table td {
    padding: 4px 3px 4px 3px;
}
#PolicyRules .contrail-editable-grid-table th:first-child, #PolicyRules .contrail-editable-grid-table td:first-child {
    padding-left: 6px;
}
.collapsibleChildContainer table{
    width:100%;}
#port_tuples_vmi_collection th{
    padding-left:5px;}
#port_tuples_vmi_collection td{
    padding-left:2px;}
#port-tuples-collection th:first-child{
    min-width:20px!important;}
/* ... */

